@@ -388,6 +388,26 @@ local function refresh(bufnr, client_id, only_visible)
   end
 end
 
+--- |lsp-handler| for the method `workspace/diagnostic/refresh`
+---@param ctx lsp.HandlerContext
+---@private
+function M.on_refresh(err, _, ctx)
+  if err then
+    return vim.NIL
+  end
+  for bufnr in pairs(vim.lsp.get_client_by_id(ctx.client_id).attached_buffers or {}) do
+    for _, winid in ipairs(api.nvim_list_wins()) do
+      if api.nvim_win_get_buf(winid) == bufnr then
+        if bufstates[bufnr] and bufstates[bufnr].pull_kind == 'document' then
+          refresh(bufnr)
+        end
+      end
+    end
+  end
+
+  return vim.NIL
+end
+
 --- Enable pull diagnostics for a buffer
 ---@param bufnr (integer) Buffer handle, or 0 for current
 function M._enable(bufnr)
